[gd_scene load_steps=5 format=3 uid="uid://bscyfv0l0vw0e"]

[ext_resource type="Texture2D" uid="uid://b4hhkipq6wabg" path="res://Square.png" id="1_2jjtc"]
[ext_resource type="Script" path="res://Enemy/enemy.gd" id="2_juorl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8sdr"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_yvagm"]
radius = 84.6693

[node name="Enemy" type="Sprite2D"]
modulate = Color(0.827451, 0, 0.054902, 1)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_2jjtc")
script = ExtResource("2_juorl")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource("RectangleShape2D_j8sdr")

[node name="Stun_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="hp_label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -19.3333
offset_top = -12.6667
offset_right = 18.6667
offset_bottom = 13.3333
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BulletStop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletStop"]
shape = SubResource("CircleShape2D_yvagm")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="area_entered" from="BulletStop" to="." method="_on_aoe_area_entered"]
